@@ -4,7 +4,7 @@
 # Copyright (c) 2012, Yoshizumi Endo.
 # Licence: GPL3
 
-from output import TwitterRestOutput, TwitterSearchOutput, TwitterFeedOutput
+from output import TwitterRestOutput, TwitterSearchOutput, TwitterFeedOutput, TwitterRelatedResultsOutput
 
 
 class TwitterAPIDict(dict):
@@ -16,6 +16,7 @@ class TwitterAPIDict(dict):
              TwitterAPIMentions,
              TwitterAPIDirectMessages,
              TwitterSearchAPI,
+             TwitterRelatedResults,
 
              TwitterAPIUserStream,
              TwitterAPITrack,
@@ -129,3 +130,15 @@ class TwitterSearchAPI(TwitterAPIBase):
 
     def get_options(self, argument):
         return {'q': argument}
+
+class TwitterRelatedResults(TwitterAPIBase):
+
+    output= TwitterRelatedResultsOutput
+    name = _('Related Results')
+    has_argument = True
+
+    def _get_api(self):
+        return self.account.api.related_results
+
+    def get_options(self, argument):
+        return {'id': argument.encode('utf-8')}
